--- a/public/complements/styles/main/home/navbar.css
+++ b/public/complements/styles/main/home/navbar.css
@@ -1,223 +1,109 @@
-/* navbar section starts here */
-
+/* General navbar styles */
 #navbar {
-    width          : 100%;
-    position       : fixed;
-    top            : 0;
-    left           : 0;
-    display        : flex;
-    justify-content: space-between;
-    align-items    : center;
-    padding        : 10px 20px;
-    background     : transparent;
-    z-index        : 2000;
-    transition     : background-color 0.5s ease, color 0.5s ease;
-}
-
-.light-mode #navbar {
-    background-color: transparent;
-}
-
-#navbar .menu-icon {
-    cursor  : pointer;
-    z-index : 2001;
-    position: relative;
-    width   : calc(100% - 97%);
-}
-
-#navbar .menu-icon-bar {
-    display         : block;
-    width           : 33px;
-    height          : 4px;
-    margin-bottom   : 5px;
-    background-color: var(--color-light);
-    transition      : all 0.3s ease;
-}
-
-.light-mode #navbar .menu-icon-bar {
+    width           : 100%;
     background-color: var(--color-dark);
+    display         : flex;
+    justify-content : space-between;
+    align-items     : center;
+    position        : relative;
+    top             : 0;
+    left            : 0;
+    justify-content : space-between;
+    padding         : 60px 20px;
+    z-index         : 2000;
+    transition      : background-color 0.5s ease, color 0.5s ease;
+    /* Para trabajar con el centrado */
 }
 
-#navbar .menu-icon.close .menu-icon-bar:nth-child(1) {
-    transform: rotate(45deg);
-    position : absolute;
-    top      : 50%;
-    left     : 0;
-}
-
-#navbar .menu-icon.close .menu-icon-bar:nth-child(2) {
-    opacity: 0;
-}
-
-#navbar .menu-icon.close .menu-icon-bar:nth-child(3) {
-    transform: rotate(-45deg);
-    position : absolute;
-    top      : 50%;
-    left     : 0;
-}
-
-#navbar .menu-icon.close {
-    background-color: transparent;
-}
-
-.logo a {
+/* Left side logo */
+.nav-left .logo {
+    font-size      : 18px;
+    color          : white;
+    text-decoration: none;
     font-family    : "aero";
-    font-size      : 2.5em;
-    color          : var(--color-main);
-    text-decoration: none;
 }
 
-.line {
-    border    : 0;
-    border-top: 1px solid var(--color-grey);
-    margin    : 20px 0;
+/* Center navigation items (centrado) */
+.nav-list {
+    display      : flex;
+    list-style   : none;
+    padding      : 13px 1px;
+    margin       : 0;
+    border-radius: 40px;
+    border       : 1px solid #555;
+    position     : absolute;
+    /* Posición absoluta para centrado */
+    left         : 50%;
+    transform    : translateX(-50%);
+    /* Centra la lista horizontalmente */
 }
 
-/* navbar section ends here */
-
-/* menu section starts here */
-
-#overlayNav {
-    position        : fixed;
-    top             : 0;
-    left            : 0;
-    width           : 100%;
-    height          : 0;
-    background-color: var(--color-black);
-    overflow        : hidden;
-    z-index         : 1500;
-    transition      : height 0.5s ease-in-out, background-color 0.5s ease;
+/* Nav items styling */
+.nav-item {
+    margin: 3px;
 }
 
-.light-mode #overlayNav {
-    background-color: var(--color-light);
+.nav-item a i {
+    margin-right: 5px;
+    /* Espaciado entre el ícono y el texto */
 }
 
-#overlayNav .overlay-content {
-    display        : flex;
-    justify-content: space-between;
-    padding        : 20px;
-    height         : 100%;
+
+.nav-list .nav-item a {
+    text-decoration : none;
+    padding         : 14px 25px;
+    border-radius   : 25px;
+    font-family     : "neue";
+    font-size       : 1.2em;
+    color           : #fff;
+    background-color: #333;
+    transition      : background-color 0.3s ease, color 0.3s ease;
 }
 
-#overlayNav .overlay-left,
-#overlayNav .overlay-right {
-    width: 50%;
+.nav-item.active a {
+    background-color: #fff;
+    color           : #000;
 }
 
-#overlayNav .overlay-video img {
-    width         : 500px;
-    height        : 300px;
-    margin-left   : 15rem;
-    margin-top    : 5rem;
-    border-radius : 5px;
-    pointer-events: none;
+.nav-item a:hover {
+    background-color: #555;
+    color           : #fff;
 }
 
-#overlayNav .overlay-video .video-controls span {
-    margin-top : 10px;
-    margin-left: 15rem;
-    color      : var(--color-white);
-    font-family: "neue";
+/* Right side login and signup */
+.nav-right {
+    display    : flex;
+    align-items: center;
 }
 
-.light-mode #overlayNav .overlay-video .video-controls span {
-    color: var(--color-black);
+.signup-link {
+    text-decoration : none;
+    padding         : 10px 20px;
+    margin-left     : 15px;
+    border-radius   : 25px;
+    font-family     : 'Arial', sans-serif;
+    color           : #fff;
+    background-color: #6a5acd;
+    position        : relative;
 }
 
-#overlayNav .overlay-right ul {
-    list-style: none;
-    padding   : 0;
-    margin-top: 5rem;
+.signup-link .arrow {
+    display    : inline-block;
+    font-size  : 16px;
+    margin-left: 8px;
 }
 
-#overlayNav .overlay-right ul li {
-    margin: 10px 0;
+.login-link {
+    text-decoration : none;
+    padding         : 10px 20px;
+    border-radius   : 25px;
+    font-family     : 'Arial', sans-serif;
+    color           : #fff;
+    background-color: #333;
 }
 
-#overlayNav .overlay-right ul li a {
-    font-size      : 2em;
-    color          : var(--color-white);
-    text-decoration: none;
-    font-family    : "neue";
-    position       : relative;
-    transition     : text-decoration-color 0.3s ease, text-decoration-thickness 0.3s ease;
+.signup-link:hover,
+.login-link:hover {
+    background-color: #555;
+    color           : #fff;
 }
-
-.light-mode #overlayNav .overlay-right ul li a {
-    color: var(--color-black);
-}
-
-#overlayNav .overlay-right ul li a::after {
-    content         : '';
-    display         : block;
-    position        : absolute;
-    left            : 0;
-    bottom          : 0;
-    width           : 100%;
-    height          : 2px;
-    background-color: var(--color-white);
-    transform       : scaleX(0);
-    transform-origin: bottom right;
-    transition      : transform 0.3s ease;
-}
-
-.light-mode #overlayNav .overlay-right ul li a::after {
-    background-color: var(--color-black);
-}
-
-#overlayNav .overlay-right ul li a:hover::after {
-    transform       : scaleX(1);
-    transform-origin: bottom left;
-}
-
-#overlayNav .cta-button {
-    position  : relative;
-    margin-top: 20px;
-    padding   : 10px 20px;
-    background: transparent;
-    border    : 2px solid var(--color-light);
-    color     : var(--color-light);
-    font-size : 1.5em;
-    cursor    : pointer;
-    overflow  : hidden;
-    transition: color 0.3s ease;
-}
-
-.light-mode #overlayNav .cta-button {
-    color : var(--color-dark);
-    border: 2px solid var(--color-dark);
-}
-
-#overlayNav .cta-button::after {
-    content         : '';
-    display         : block;
-    position        : absolute;
-    left            : 0;
-    top             : 0;
-    width           : 100%;
-    height          : 100%;
-    background-color: var(--color-main);
-    transform       : scaleX(0);
-    transform-origin: left;
-    transition      : transform 0.3s ease;
-    z-index         : -1;
-}
-
-#overlayNav .cta-button:hover::after {
-    transform: scaleX(1);
-}
-
-#overlayNav .cta-button:hover {
-    color: var(--color-light);
-}
-
-.light-mode #overlayNav .cta-button:hover {
-    color: var(--color-dark);
-}
-
-#overlayNav.active {
-    height: 65vh;
-}
-
-/* menu section ends here */
