--- a/public/complements/styles/main/home/start.css
+++ b/public/complements/styles/main/home/start.css
@@ -60,7 +60,7 @@
 .cursor {
   pointer-events: none;
   position      : absolute;
-  padding       : 0.5vw;
+  padding       : 0.3vw;
   border-radius : 50%;
   z-index       : 9000;
   transition    : transform 0.1s ease, width 0.3s ease, height 0.3s ease,
@@ -103,21 +103,33 @@ hr {
 
 .scroll-to-top {
   position        : fixed;
-  bottom          : 20px;
-  right           : 20px;
-  width           : 50px;
-  height          : 50px;
-  background-color: var(--color-light);
-  color           : var(--color-black);
+  bottom          : 60px;
+  right           : 60px;
+  width           : 100px;
+  height          : 100px;
+  font-size       : 2.5em;
+  background-color: transparent;
+  color           : var(--color-white);
   display         : flex;
   align-items     : center;
   justify-content : center;
   border-radius   : 50%;
   text-decoration : none;
-  transition      : background-color 0.5s, opacity 0.5s;
-  opacity         : 0;
+  border          : 2px solid var(--color-light-grey);
+  transition      : width 0.5s, height 0.5s, opacity 0.5s, transform 0.5s ease;
+  opacity         : 1;
   pointer-events  : none;
   z-index         : 1000;
+}
+
+/* Tamaño reducido cuando se scrollea */
+.scroll-to-top.scrolled {
+  width         : 50px;
+  height        : 50px;
+  font-size     : 15px;
+  opacity       : 0.8;
+  transition    : width 0.5s, height 0.5s, opacity 0.5s, transform 0.5s ease;
+  pointer-events: auto;
 }
 
 .light-mode .scroll-to-top {
@@ -125,13 +137,7 @@ hr {
   color           : var(--color-light);
 }
 
-.scroll-to-top:hover {
-  background-color: var(--color-light-grey);
-}
 
-.light-mode .scroll-to-top:hover {
-  background-color: var(--color-semigrey);
-}
 
 /* banner cookie styles */
 
