--- a/public/complements/styles/main/home/navbar.css
+++ b/public/complements/styles/main/home/navbar.css
@@ -5,13 +5,14 @@
     display         : flex;
     justify-content : space-between;
     align-items     : center;
-    position        : relative;
+    position        : absolute;
     top             : 0;
     left            : 0;
     justify-content : space-between;
     padding         : 60px 60px;
     z-index         : 2000;
     transition      : background-color 0.5s ease, color 0.5s ease;
+
     /* Para trabajar con el centrado */
 }
 
@@ -22,6 +23,7 @@
 
 /* Left side logo */
 .nav-left .logo {
+    position       : fixed;
     font-size      : 2.5em;
     color          : var(--color-main);
     text-decoration: none;
@@ -36,12 +38,20 @@
     padding      : 18px 5px;
     margin       : 0;
     border-radius: 40px;
-    position     : absolute;
+    position     : fixed;
     border       : 1px solid var(--color-grey);
     /* Posición absoluta para centrado */
     left         : 50%;
     transform    : translateX(-50%);
-    /* Centra la lista horizontalmente */
+    /* Fondo con transparencia para permitir el blur */
+    background   : rgba(0, 0, 0, 0.2);
+    /* Color blanco con 20% de opacidad */
+
+    /* Efecto de difuminado */
+    backdrop-filter        : blur(10px);
+    /* Aplica el blur */
+    -webkit-backdrop-filter: blur(10px);
+    /* Soporte para Safari */
 }
 
 /* Nav items styling */
@@ -83,14 +93,22 @@
 }
 
 .signup-link {
-    text-decoration : none;
-    padding         : 7px 18px;
-    margin-left     : 15px;
-    border-radius   : 25px;
-    background-color: transparent;
-    border          : 1px solid var(--color-grey);
-    position        : relative;
-    color           : var(--color-light-grey);
+    position       : fixed;
+    text-decoration: none;
+    padding        : 7px 18px;
+    margin-left    : 15px;
+    border-radius  : 25px;
+    border         : 1px solid var(--color-grey);
+    position       : relative;
+    color          : var(--color-light-grey);
+    background     : rgba(0, 0, 0, 0.2);
+    /* Color blanco con 20% de opacidad */
+
+    /* Efecto de difuminado */
+    backdrop-filter        : blur(10px);
+    /* Aplica el blur */
+    -webkit-backdrop-filter: blur(10px);
+    /* Soporte para Safari */
 }
 
 .nav-right {
@@ -115,16 +133,23 @@
 }
 
 .login-link {
-    text-decoration : none;
-    padding         : 14px 25px;
-    border-radius   : 25px;
-    font-family     : 'neue', sans-serif;
-    font-size       : 1em;
-    color           : #fff;
-    background-color: transparent;
-    border          : 1px solid var(--color-grey);
-    color           : var(--color-light-grey);
-    transition      : color 0.3s ease, background-color 0.3s ease;
+    text-decoration: none;
+    padding        : 14px 25px;
+    border-radius  : 25px;
+    font-family    : 'neue', sans-serif;
+    font-size      : 1em;
+    color          : #fff;
+    background     : rgba(0, 0, 0, 0.2);
+    /* Color blanco con 20% de opacidad */
+
+    /* Efecto de difuminado */
+    backdrop-filter        : blur(10px);
+    /* Aplica el blur */
+    -webkit-backdrop-filter: blur(10px);
+    /* Soporte para Safari */
+    border                 : 1px solid var(--color-grey);
+    color                  : var(--color-light-grey);
+    transition             : color 0.3s ease, background-color 0.3s ease;
 }
 
 .signup-link:hover,
