--- a/public/complements/styles/main/home/navbar.css
+++ b/public/complements/styles/main/home/navbar.css
@@ -12,6 +12,7 @@
     padding         : 60px 60px;
     z-index         : 2000;
     transition      : background-color 0.5s ease, color 0.5s ease;
+    user-select     : none;
 
     /* Para trabajar con el centrado */
 }
@@ -26,7 +27,7 @@
     font-size      : 2.5em;
     color          : var(--color-main);
     text-decoration: none;
-    pointer-events : none;
+    user-select    : none;
     align-items    : center;
 }
 
@@ -42,6 +43,7 @@
     left         : 50%;
     transform    : translateX(-50%);
     background   : var(--color-black);
+    user-select  : none;
 }
 
 /* Nav items styling */
@@ -166,6 +168,7 @@
     display      : inline-block;
     z-index      : 1000;
     transition   : background-color 0.3s;
+    user-select  : none;
 }
 
 .dropdown:hover {
