--- a/public/complements/styles/main/home/home.css
+++ b/public/complements/styles/main/home/home.css
@@ -11,14 +11,14 @@
 }
 
 #particles-js {
-  position  : absolute;
-  width     : 100%;
-  height    : 100%;
-  z-index   : 1;
+  position      : absolute;
+  width         : 100%;
+  z-index       : 1;
   /* Detrás del contenido */
-  top       : 0;
-  left      : 0;
-  background: var(--color-dark);
+  top           : 0;
+  left          : 0;
+  background    : var(--color-dark);
+  pointer-events: none;
   /* El mismo color de fondo de tu .home */
 }
 
