--- a/public/complements/styles/main/home/start.css
+++ b/public/complements/styles/main/home/start.css
@@ -78,7 +78,7 @@
 hr {
   width : 80%;
   margin: 50px auto;
-  border: 1px solid var(--color-grey);
+  border: 1px solid var(--color-semiblack);
 }
 
 .light-mode hr {
@@ -99,6 +99,8 @@ hr {
   opacity  : 1;
   transform: translateY(0);
 }
+
+
 
 /* scroll icon styles */
 
