--- a/public/complements/styles/main/home/navbar.css
+++ b/public/complements/styles/main/home/navbar.css
@@ -82,7 +82,7 @@
 
 .link-title1 {
     transform-origin: right center;
-    color           : var(--color-grey);
+    color           : gray;
 }
 
 .link-title2 {
@@ -117,6 +117,11 @@
     transition      : background-color 0.3s ease, color 0.3s ease;
 }
 
+.nav-list .nav-item .signup:hover {
+    background-color: rgb(223, 19, 19);
+    color           : var(--color-light-grey);
+}
+
 .nav-list .nav-item .login {
     text-decoration: none;
     padding        : 10px 15px;
@@ -125,13 +130,12 @@
     font-size      : 1.2em;
     color          : var(--color-light-grey);
     border         : 1px solid var(--color-grey);
-    transition     : background-color 0.3s ease, color 0.3s ease;
+    transition     : background-color 0.3s ease, color 0.3s ease, border 0.3s ease;
 }
 
-.nav-item.active a {
-    color: var(--color-light-grey);
+.nav-list .nav-item .login:hover {
+    border: 1px solid var(--color-light-grey);
 }
-
 
 .nav-item .arrow {
     font-size       : 1em;
