--- a/public/complements/styles/main/home/features.css
+++ b/public/complements/styles/main/home/features.css
@@ -4,7 +4,6 @@
     display              : grid;
     grid-template-columns: repeat(3, 1fr);
     gap                  : 20px;
-    background-color     : var(--color-black);
     padding              : 0 14.5rem;
     border-radius        : 10px;
     margin-top           : 10px;
@@ -20,8 +19,9 @@
 .features-block h3 {
     grid-column  : span 3;
     margin-bottom: 20px;
-    font-family  : "neue";
-    font-size    : 2.9em;
+    font-family  : "neue-medium";
+    color        : var(--color-light-grey);
+    font-size    : 3.2em;
     font-weight  : lighter;
     opacity      : 0;
     transform    : translateX(-200px);
